prototypes/p4a/tests/multifile/invalid/multifile_visibility/consumer.hll
module consumer

import lib.privateHelper

function main() {
    let x = privateHelper()
}
